# CoinUA

./: .gitignore  COPYING  LICENSE  Makefile.am  README.md  configure.ac
build-aux/m4/: bitcoin_qt.m4
build_msvc/: bitcoin_config.h  msvc-autogen.py
build_msvc/bitcoind/: bitcoind.vcxproj
ci/test/: 05_before_script.sh
contrib/: gitian-build.py  install_db4.sh
contrib/devtools/: gen-manpages.sh
contrib/gitian-descriptors/: assign_DISTNAME  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  coinuad.conf  coinuad.init  coinuad.openrc  coinuad.openrcconf  coinuad.service
contrib/linearize/: example-linearize.cfg
contrib/macdeploy/: custom_dsstore.py  detached-sig-create.sh  macdeployqtplus
contrib/seeds/: generate-seeds.py
doc/: Doxyfile.in  README_windows.txt  coinua-conf.md  release-notes.md
doc/man/: Makefile.am  coinua-cli.1  coinua-qt.1  coinua-tx.1  coinua-wallet.1  coinuad.1
docker/: .dockerignore  Dockerfile  build_lin_debug.sh  build_win_debug.sh  coinua-build.sh
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  amount.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  chainparams.cpp  chainparamsbase.cpp  clientversion.cpp  founder_payment.cpp  founder_payment.h  init.cpp  key.cpp  miner.cpp  net_processing.cpp  netaddress.h  validation.cpp  validation.h
(+181 files in other folders)
